--- a/web/prompt-creation.css
+++ b/web/prompt-creation.css
@@ -2,29 +2,36 @@
     --main-color : #f8693e;
     --main-bg-color : #FFF9F6;
     --main-shadow : 5px 5px 5px rgba(0, 0, 0, 0.205);
+    --txt-color : black;
+    --bg-color : rgb(31, 23, 48);
+    --header-color : rgb(234, 229, 253);
+    --form-color : rgb(40, 31, 59);
 }
 
 
 html {
     height: 100%;
+    background-color: var(--bg-color);
 }
 
 h1{
     text-align: center;
-    color: white;
+   
 }
 
 
 header {
     width: 100%;
     height: 100px;
-    margin-bottom: 75px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    margin-bottom: 100px;
+
     display: flex;
     flex-direction: column;
     padding: 10px;
-    background-color: #f85f34;
+    color: var(--header-color);
+
+    text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 header nav {
@@ -32,7 +39,6 @@ header nav {
     height: 50px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
-    color: white;
     display: flex;
     gap: 10px;
     padding-left: 10px;
@@ -44,7 +50,6 @@ header nav {
 
 header nav span 
 {
-    background-color: #ff8351;
     padding: 2px;
     border-radius: 5px;
     cursor: pointer;;
@@ -59,7 +64,7 @@ header nav span:hover
 
 header nav span a {
     text-decoration: none;
-    color: white;
+    color: var(--header-color);
 }
 
 
@@ -67,13 +72,13 @@ header nav span a {
     display: flex;
     justify-content: center;
     padding: 16mm;
-    background-color: var(--main-bg-color);
+    background-color: var(--bg-color);
     filter: drop-shadow(20%);
     flex-wrap: wrap;
 }
 
 .log-section {
-    background-color: var(--main-bg-color);
+    background-color: var(--bg-color);
     display: flex;
     flex-direction: column;
     padding: 50px;
@@ -111,7 +116,7 @@ header nav span a {
     z-index: 10;
 }
 .creation-container {
-    background-color: #ffffff;
+    background-color: var(--form-color);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.205);
     filter: blur(1);
     width: 700px;
@@ -128,9 +133,10 @@ header nav span a {
     border-radius: 10px;
     border-style: solid;
     border-width: 0px;
-    border-left-width: 2px;
     border-color: var(--main-color);
-    border-top-left-radius: 25px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+
 }
 
 .required-container {
