--- a/web/prompt-creation.css
+++ b/web/prompt-creation.css
@@ -1,17 +1,25 @@
 :root {
-    --main-color : #f8693e;
-    --main-bg-color : #FFF9F6;
-    --main-shadow : 5px 5px 5px rgba(0, 0, 0, 0.205);
-    --txt-color : black;
-    --bg-color : rgb(31, 23, 48);
-    --header-color : rgb(234, 229, 253);
-    --form-color : rgb(40, 31, 59);
+    --main-color : #342939;
+    --main-color2 : #181419;
+
+    --secondary-color : #F0E9FD;
+    --atention-color : #F0544F;
+    --atention-color2 :#ff0c0c;
+
+    --action-color : #C44440;
+
+    --main-font :Arial, Helvetica, sans-serif; 
+    --shadow : 5px 5px 5px rgba(0, 0, 0, 0.473);
+    --tilte-size : 12px;
+    --desc-size : 12px;
 }
 
 
 html {
     height: 100%;
-    background-color: var(--bg-color);
+    background-color: var(--main-color);
+    font-family: var(--main-font);
+    color: var(--secondary-color);
 }
 
 h1{
@@ -52,12 +60,13 @@ header nav span
 {
     padding: 2px;
     border-radius: 5px;
-    cursor: pointer;;
+    cursor: pointer;
+    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 header nav span:hover 
 {
-    background-color: #ff8554;
+    background-color: var(--action-color);
     transform: scale(1.1);
     transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
@@ -98,13 +107,13 @@ header nav span a {
 }
 
 .log p {
-    color : var(--main-color);
+    color : var(--secondary-color);
     margin-left: 20px;
     white-space: pre;
 }
 
 .log-section span {
-    background-color: var(--main-color);
+    background-color: var(--main-color2);
     color: white;
     padding: 1px;
     border-top-left-radius: 10px;
@@ -116,8 +125,9 @@ header nav span a {
     z-index: 10;
 }
 .creation-container {
-    background-color: var(--form-color);
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.205);
+   
+    box-shadow: var(--shadow);
+    background-color: var(--main-color2);
     filter: blur(1);
     width: 700px;
     height: 1000px;
@@ -165,7 +175,7 @@ header nav span a {
 .theme-list {
     flex-grow: 0.4;
     display: flex;
-    background-color: #ffffff;
+    background-color: var(--main-color);
    
     gap: 10px;
     padding: 5px;
@@ -177,8 +187,8 @@ header nav span a {
 
 .theme-list .theme-tag {
     display: block;
-    background-color: var(--main-color);
-    color: white;
+    background-color: var(--atention-color);
+    color: var(--secondary-color);
     height: 20px;
     flex-shrink: 0;
     border-radius: 5px;
@@ -202,8 +212,8 @@ header nav span a {
 }
 
 .theme-creation {
-    background-color: #fffbf9;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.144) ;
+    background-color: var(--main-color2);
+    box-shadow: var(--shadow);
     border-radius: 5px;
     padding: 5px;
     flex-grow: 0.2;
@@ -230,9 +240,9 @@ header nav span a {
 
 
 .extra-details {
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.144) ;
+    box-shadow: var(--shadow) ;
     border-radius: 10px;
-    background-color: #ffffff;
+    background-color: var(--main-color);
     display: flex;
     flex-direction: column;
     flex-grow: 0.2;
@@ -242,7 +252,7 @@ header nav span a {
 }
 
 .additional-params{
-    background-color: #ffffff;
+    background-color: var(--main-color2);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.144) ;
     display: flex;
     flex-direction: column;
@@ -255,7 +265,7 @@ header nav span a {
 
 .param-editor {
     display: flex;
-    background-color: #ffffff;
+    background-color: var(--main-color);
     padding: 5px;
     border-radius: 5px;
 }
@@ -281,7 +291,11 @@ header nav span a {
 .param {
     display: flex;
     margin-top: 5px;
+    gap: 4px;
     margin-bottom: 5px;
+    background-color: var(--main-color2);
+    padding: 5px;
+    border-radius: 5px;
 }
 .param span{
     content: url("resources/delete-cross.svg");
@@ -296,7 +310,7 @@ header nav span a {
 }
 
 .more-details {
-    background-color: #ffffff;
+    background-color: var(--main-color2);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.144) ;
 
     
@@ -315,12 +329,13 @@ header nav span a {
 
 .other-details span {
     text-align: center;
+    margin-top: 6px;
 }
 
 .image-upload {
     display: flex;
     height: 200px;
-    background-color: var(--main-color);
+    background-color: var(--main-color2);
     border-radius: 10px;
     justify-content: center;
     flex-direction: column;
@@ -345,9 +360,15 @@ header nav span a {
 }
 
 textarea {
-    background-color: #ffffff;
+    background-color: var(--main-color);
+    border-style:  none;
     border-radius: 4px;
+    color: var(--secondary-color);
     
+}
+
+textarea::placeholder {
+    color: var(--secondary-color);
 }
 
 textarea:focus {
@@ -357,16 +378,29 @@ textarea:focus {
     border-width: 0px;
     border-left-width: 2px;
     box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.247);
+    color: black;
 
    
 }
 
+textarea:focus::placeholder {
+    color: #000000;
+}
 input[type="text"] {
-    background-color: #ffffff;
+    background-color: var(--main-color);
+    border-style: none;
     border-radius: 5px;
-    border-style: solid ;
     border-width: 1px;
+    color: var(--secondary-color);
 
+}
+
+input[type="text"]::placeholder {
+    color: var(--secondary-color);
+}
+
+input[type="text"]:focus::placeholder {
+    color: #000000;
 }
 
 input[type="text"]:focus {
@@ -376,20 +410,26 @@ input[type="text"]:focus {
     border-width: 0px;
     border-left-width: 2px;
     box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.247);
+    color: rgb(0, 0, 0);
 }
 
 input[type="button"] {
-    background-color: #f85f34;
+    background-color: var(--atention-color);
     border-radius: 4px;
     border-style: hidden;
+    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+
 }
 
 input[type="button"]:hover {
-    background-color: #ca6448;
+    background-color: var(--action-color);
+    box-shadow: var(--shadow);
+    transform: translate(-1px , -1px);
+    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 input[type="button"]:active {
-    background-color: #f77a5a;
+    background-color: var(--main-color2);
     border-radius: 4px;
     border-style: hidden;
     transform: scale(1.05) translate3d(0px , -1px , 0px);
@@ -397,16 +437,12 @@ input[type="button"]:active {
 }
 
 ::-webkit-scrollbar {
-    background-color: #fddbd1;
-    border-radius: 50px;
-    border-style: solid;
-    border-width: 2px;
-    border-color: #eb9b87;
+    background-color: var(--main-color2);
 
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #ff5a31;
+    background-color: var(--action-color);
     border-radius: 10px;
 }
 
@@ -425,4 +461,23 @@ input[type="file"] {visibility: hidden;}
 
 #prompt_quality_value {
     background-color: var(--main-color);
+}
+
+input[type="range"] {
+    appearance: none;
+    background-color: var(--atention-color);
+    width: 100%;
+    border-radius: 10px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none; 
+    appearance: none;
+    width: 20px; 
+    height: 20px; 
+    background: var(--main-color); 
+    border-radius: 50%;
+    cursor: pointer; 
+
+
 }
